deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicename
  namespace: namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: servicename
  template:
    metadata:
      annotations:
        prome/example: "true"
        prome/port: "1234"
      labels:
        app: servicename
    spec:
      imagePullSecrets:
        - name: image secret
      containers:
      - name: servicename
        image: registry image
        imagePullPolicy: Always
        ports:
        - containerPort: 80
