ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: servicename
  namespace: namespace
spec:
  ingressClassName: ingressClassName 
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          service:
            name: servicename
            port:
              number: 9090
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - example.com
    secretName: tls-name
